--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "insomnia-plugin-aws-cognito",
-  "version": "1.0.4",
+  "version": "1.0.7",
   "description": "Plugin for Insomnia to provide Cognito JWT token from AWS",
   "main": "./src/plugin.js",
   "scripts": {
@@ -24,9 +24,13 @@
     "description": "Plugin for Insomnia to provide Cognito JWT token from AWS"
   },
   "dependencies": {
-    "amazon-cognito-identity-js": "^3.0.5",
-    "aws-sdk": "^2.373.0",
-    "crypto-js": "^3.1.9-1",
-    "jwt-decode": "^2.2.0"
+    "amazon-cognito-identity-js": "^4.3.2",
+    "aws-sdk": "2.631.0",
+    "crypto-js": "^4.0.0",
+    "jwt-decode": "^2.2.0",
+    "buffer": "^5.6.0"
+  },
+  "peerDependencies": {
+    "buffer": "^5.6.0"
   }
 }
