--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "insomnia-plugin-aws-cognito",
-  "version": "1.0.7",
+  "version": "1.0.10",
   "description": "Plugin for Insomnia to provide Cognito JWT token from AWS",
   "main": "./src/plugin.js",
   "scripts": {
@@ -24,13 +24,10 @@
     "description": "Plugin for Insomnia to provide Cognito JWT token from AWS"
   },
   "dependencies": {
+    "buffer": "^4.9.2",
     "amazon-cognito-identity-js": "^4.3.2",
-    "aws-sdk": "2.631.0",
+    "aws-sdk": "2.708.0",
     "crypto-js": "^4.0.0",
-    "jwt-decode": "^2.2.0",
-    "buffer": "^5.6.0"
-  },
-  "peerDependencies": {
-    "buffer": "^5.6.0"
+    "jwt-decode": "^2.2.0"
   }
 }
